# atsuko

./: .gitignore  README.md  pyproject.toml
src/atsuko/: __init__.py  cli.py
tests/: cli.py
